--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.2"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.5",
