--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.jsx\"",
+    "test": "web-test-runner \"src/**/*.test.jsx\" --node-resolve",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
@@ -15,10 +15,11 @@
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-webpack": "^2.3.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/react": "^11.0.0",
-    "@web/test-runner": "^0.12.0",
-    "chai": "^4.2.0",
+    "@web/test-runner": "^0.12.15",
+    "chai": "^4.3.0",
     "prettier": "^2.0.5",
     "snowpack": "^3.0.1"
   }
